--- a/calendario.html
+++ b/calendario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendario Interactivo</title>
+    <title>Calendario Interactivo - Estilo Doodle</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -83,7 +83,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Calendario Interactivo</h2>
+        <h2>Calendario Interactivo - Selección de Disponibilidad</h2>
         <div class="form-group">
             <label for="medico">Seleccionar Médico:</label>
             <select id="medico" onchange="generarCalendario()"></select>
