--- a/calendario.html
+++ b/calendario.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calendario Interactivo - Estilo Doodle</title>
+    <title>Calendario Interactivo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
